devops/k8s/qdrant-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qdrant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qdrant
  template:
    metadata:
      labels:
        app: qdrant
    spec:
      containers:
        - name: qdrant
          image: qdrant/qdrant:v1.3.0
          ports:
            - containerPort: 6333
              name: http
            - containerPort: 6334
              name: grpc
---
apiVersion: v1
kind: Service
metadata:
  name: qdrant
spec:
  ports:
    - port: 6333
      name: http
      targetPort: 6333
    - port: 6334
      name: grpc
      targetPort: 6334
  selector:
    app: qdrant
